--- a/frontend/src/components/pages/home/wallet-section/styles.module.css
+++ b/frontend/src/components/pages/home/wallet-section/styles.module.css
@@ -1,21 +1,14 @@
 .connectWallet {
-    color: lightgreen;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
-.logo {
-}
-
-.heading {
-}
-
-.heading .indicator {
-}
-
-.heading .text {
-}
-
-.subheading {
-}
 
 .btnContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
