--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: "Roobert";
   font-weight: 300;
@@ -34,18 +35,20 @@
   src: url("/fonts/roobert/Roobert-Heavy.ttf") format("truetype");
 }
 
-* {
+html {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
+  font-size: 16px;
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #0C0C0C;
-  font-family: Roobert, sans-serif;
+  font-family: "Roobert", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 a {
@@ -59,13 +62,7 @@ a {
   }
 }
 
-ul,
-h1,
-h2,
-h3,
-h4,
-button,
-input {
+ul, h1, h2, h3, h4, button, input {
   margin: 0;
   padding: 0;
 }
@@ -74,12 +71,23 @@ code {
   user-select: all;
 }
 
-input {
+button, input, textarea {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
   background-color: unset;
   border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
 
 button {
   cursor: pointer;
-  border: none;
 }
+
+a:focus, button:focus, input:focus {
+  outline: 2px solid #FF6600;
+  outline-offset: 2px;
+}
+
